[package]
name = "prog-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rkyv = "0.7.46"

clap = { version = "4.5.54", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

chrono = { version = "0.4.43", features = ["rkyv-32"] }
chrono-english = "0.1.8"

