[package]
name = "prog-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# rkyv = { version = "0.7.46", features = ["validation"] }

serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = { version = "1.0.149", features = ["alloc", "preserve_order"] }
directories = "6.0.0"

tabled = "0.20.0"
term_size = "1.0.0-beta.2"
owo-colors = "4.2.3"

clap = { version = "4.5.54", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

chrono = { version = "0.4.43", features = ["serde"] }
chrono-english = "0.1.8"

